--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
 
    <!-- Testimonials Section
-   ================================================== -->
+   ================================================== >
    <section id="testimonials">
 
       <div class="text-container">
@@ -399,7 +399,7 @@
                         </blockquote>
                      </li> <!-- slide ends -->
 
-                     <li>
+                     <!--li>
                         <blockquote>
                            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
                            Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
@@ -505,7 +505,7 @@
 
 				   </div>
 
-               <div class="widget widget_tweets">
+               <!--div class="widget widget_tweets">
 
                   <h4 class="widget-title">Latest Tweets</h4>
 
@@ -526,7 +526,7 @@
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
                      </li>
-                  </ul>
+                  </ul-->
 
 		         </div>
 
@@ -556,7 +556,7 @@
              </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2021 CeeVee</li>
+               <li>&copy; Copyright 2021 Marcos Kaynny Silva</li>
                <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
             </ul>
 
