--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <li><a class="smoothscroll" href="#about">About</a></li>
               <li><a class="smoothscroll" href="#resume">Resume</a></li>
               <!--<li><a class="smoothscroll" href="#portfolio">Works</a></li>-->
-              <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+              <!--li><a class="smoothscroll" href="#testimonials">Testimonials</a></li-->
               <li><a class="smoothscroll" href="#contact">Contact</a></li>
           </ul> <!-- end #nav -->
 
@@ -125,7 +125,7 @@
                <div class="columns download">
                    <p>
                        <a href="#" class="button"><i class="fa fa-download"></i>Download PDF Resume</a>
-                       <a href="#" class="button"><i class="fa fa-download"></i>Download Linkedin Resume</a>
+                       <a href="doc/profile.pdf" class="button"><i class="fa fa-download"></i>Download Linkedin Resume</a>
                    </p>
                </div>
 
