--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Marcos Kaynny.</h1>
-            <h3>I'm a Brazil based <span>starting developer</span>, <span>teacher</span> and <span>entrepeneur</span> creating awesome and
-            effective solutions for companies of all sizes around my countr. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm a Brazil based <span>mobile developer</span>, <span>teacher</span> and <span>entrepeneur</span> creating awesome and
+            effective solutions for companies of all sizes around my country. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -69,7 +69,7 @@
                 <li><a href="https://www.instagram.com/kaynny/"><i class="fa fa-instagram"></i></a></li>
                 <li><a href="https://github.com/Kaynny"><i class="fa fa-github"></i></a></li>
                 <li><a href="https://join.skype.com/invite/uTV4XZT3l5Ob"><i class="fa fa-skype"></i></a></li>
-                <li><a href="tel:5511959469197"><i class="fa fa-phone"></i></a></li>
+                <li><a href="tel:5511982232372"><i class="fa fa-phone"></i></a></li>
           
             </ul>
          </div>
@@ -99,10 +99,10 @@
             <h2>About Me</h2>
 
             <p>
-                My name is Marcos Kaynny and I am a starting Junior Developer. I am an accomplished coder and programmer, currently learning Java, Python and Kotlin,
+                My name is Marcos Kaynny and I am an Android Developer. I am an accomplished coder and programmer, currently in Kotlin,
                 and I enjoy using my skills to contribute to the exciting technological advances that happen every day at current position. I'm close to graduation
-                from FMU in International Commerce in 2021, from Univesp in 2022 with a Bachelor's Degree in Information of Tecnology and University Anhembi Morumbi,
-                with a Bachelor's Degree in Production Engineering in 2023. I have 5 years of experience with productivity tools, such as Six Sigma and Lean Manufacturing.
+                from FMU in International Commerce in 2023, from Univesp in 2023 with a Bachelor's Degree in Information of Tecnology and University Anhembi Morumbi,
+                with a Bachelor's Degree in Production Engineering expected for 2024. I have 3 years of experience with SCRUM and Agile, 3 years of mobile development and 5 years of experience with productivity tools like Six Sigma and Lean Manufacturing.
             </p>
 
             <div class="row">
@@ -115,7 +115,7 @@
 						   <span>São Paulo City<br>
 						         State of São Paulo - Brazil
                      </span><br>
-						   <span><a href="5511959469197">+55 11 95946 9197</a></span><br>
+						   <span><a href="5511982232372">+55 11 98223 2372</a></span><br>
                      <span><a href="mailto:mkaynny@gmail.com">mkaynny@gmail.com
                          </a></span>
 					   </p>
@@ -124,7 +124,7 @@
 
                <div class="columns download">
                    <p>
-                       <a href="#" class="button"><i class="fa fa-download"></i>Download PDF Resume</a>
+                       <a href="doc/resume.pdf" class="button"><i class="fa fa-download"></i>Download PDF Resume</a>
                        <a href="doc/profile.pdf" class="button"><i class="fa fa-download"></i>Download Linkedin Resume</a>
                    </p>
                </div>
@@ -157,7 +157,7 @@
                  <div class="twelve columns">
 
                      <h3>UNIVESP</h3>
-                     <p class="info">B.A. Degree in Information of Tecnology <span>&bull;</span> <em class="date">graduation expected in 2022</em></p>
+                     <p class="info">B.A. Degree in Information of Tecnology <span>&bull;</span> <em class="date">graduation expected in 2023</em></p>
 
                      <p>
                          This course provides me knoledge to act from the development of solutions and systems to their integration, deployment and applications with Big Data,
@@ -175,7 +175,7 @@
                  <div class="twelve columns">
 
                      <h3>FMU</h3>
-                     <p class="info">Tech Degree in International Commerce <span>&bull;</span> <em class="date">graduation expected in December 2021</em></p>
+                     <p class="info">Tech Degree in International Commerce <span>&bull;</span> <em class="date">graduation expected in December 2023</em></p>
 
                      <p>
                          Course developed with relevant subjects on Trade Exchanges, legislation, Import and Export, International Law, International Economics,
@@ -191,7 +191,7 @@
                  <div class="twelve columns">
 
                      <h3>Uni. Anehmbi Morumbi</h3>
-                     <p class="info">B.A. Degree in Production Engineering <span>&bull;</span> <em class="date">graduation expected in December 2023</em></p>
+                     <p class="info">B.A. Degree in Production Engineering <span>&bull;</span> <em class="date">graduation expected in December 2024</em></p>
 
                      <p>
                          Course focused on teaching how to manage a company's human, financial and material resources, in order to increase its productivity and profitability.
@@ -214,16 +214,31 @@
          </div>
 
          <div class="nine columns main-col">
+             <div class="row item">
 
+                 <div class="twelve columns">
+
+                     <h3>CNA</h3>
+                     <p class="info">Android Developer <span>&bull;</span> <em class="date">January 2022 - September 2023</em></p>
+
+                     <p>
+			Developer skilled in coding and troubleshooting Android banking/finance applications, with experience in team collaboration,
+			testing and software maintenance. Among his skills, he performed code management, information security and integration of APIs
+			for efficient delivery of development projects.
+                     </p>
+
+                 </div>
+
+             </div> <!-- item end -->
              <div class="row item">
 
                  <div class="twelve columns">
 
                      <h3>Lowcost Gerenciamento de Serviços</h3>
-                     <p class="info">Full Network Operations Analyst <span>&bull;</span> <em class="date">February 2021 - Present</em></p>
+                     <p class="info">Full Network Operations Analyst <span>&bull;</span> <em class="date">February 2021 - January 2022</em></p>
 
                      <p>
-                         I'm responsible for installing, managing and monitoring networks and endpoints from a centralized headquarters. I play a back-end role
+                         I was responsible for installing, managing and monitoring networks and endpoints from a centralized headquarters. I played a back-end role
                          and i have experience with servers, networks, EMM and information technology.
                      </p>
 
@@ -236,11 +251,11 @@
                  <div class="twelve columns">
 
                      <h3>CNA</h3>
-                     <p class="info">English Teacher <span>&bull;</span> <em class="date">2017 - Present</em></p>
+                     <p class="info">English Teacher <span>&bull;</span> <em class="date">January 2017 - July 2023</em></p>
 
                      <p>
-                         I'm responsible for teaching students based on corporate curriculum guidelines within its specialist subject areas. Planning, preparing and
-                         delivering lessons. Supporting the leadership team to implement the school’s development plan.Assessing and reporting on the behaviour of students.
+                         I was responsible for teaching students based on corporate curriculum guidelines within its specialist subject areas. Planning, preparing and
+                         delivering lessons. Supporting the leadership team to implement the school’s development plan. Assessing and reporting on the behaviour of students.
                          Providing educational and social guidance to students and/or signposting them to specialist areas of advice when needed.
                      </p>
 
@@ -318,12 +333,12 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>SAP></li>
-                        <li><span class="bar-expand illustrator"></span><em>SCRUM</em></li>
+					   	<li><span class="bar-expand photoshop"></span><em>SAP</li>
+                        			<li><span class="bar-expand illustrator"></span><em>SCRUM</em></li>
 						<li><span class="bar-expand wordpress"></span><em>Java</em></li>
-						<li><span class="bar-expand css"></span><em>Office</em></li>
+						<li><span class="bar-expand css"></span><em>Kotlin</em></li>
 						<li><span class="bar-expand html5"></span><em>HTML</em></li>
-                        <li><span class="bar-expand jquery"></span><em>Python</em></li>
+                        			<li><span class="bar-expand jquery"></span><em>Python</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
@@ -352,7 +367,7 @@
 
          <div class="seven columns">
 
-            <h2>Send me direct message on WhatsApp.</h2>
+            <h2>Send me a direct message on WhatsApp.</h2>
             <p>Looking for more information about me? Do you have any questions? </p>
 					
 
@@ -500,6 +515,7 @@
 						   Marcos Kaynny Silva<br>
 						   São Paulo City <br>
 						   State of São Paulo, Brazil<br>
+						   <span><a href="tel:5511982232372">+55 11 98223-2372</a></span>
 						   <span><a href="tel:5511959469197">+55 11 95946-9197</a></span>
 					   </p>
 
@@ -552,11 +568,11 @@
                  <li><a href="https://www.instagram.com/kaynny/"><i class="fa fa-instagram"></i></a></li>
                  <li><a href="https://github.com/Kaynny"><i class="fa fa-github"></i></a></li>
                  <li><a href="https://join.skype.com/invite/uTV4XZT3l5Ob"><i class="fa fa-skype"></i></a></li>
-                 <li><a href="tel:5511959469197"><i class="fa fa-phone"></i></a></li>
+                 <li><a href="tel:5511982232372"><i class="fa fa-phone"></i></a></li>
              </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2021 Marcos Kaynny Silva</li>
+               <li>&copy; Copyright 2023 Marcos Kaynny Silva</li>
                <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
             </ul>
 
