--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                  <div class="twelve columns">
 
-                     <h3>CNA</h3>
+                     <h3>Letsbank</h3>
                      <p class="info">Android Developer <span>&bull;</span> <em class="date">January 2022 - September 2023</em></p>
 
                      <p>
